[gd_scene load_steps=5 format=2]

[ext_resource path="res://gui/game_over/game_over.gd" type="Script" id=1]
[ext_resource path="res://gui/fonts/pixellari_24.tres" type="DynamicFont" id=2]
[ext_resource path="res://gui/theme/pixel_theme.tres" type="Theme" id=3]
[ext_resource path="res://gui/game_over/star_gray.png" type="Texture" id=4]

[node name="GameOver" type="MarginContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -150.0
margin_right = 125.0
rect_min_size = Vector2( 250, 300 )
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 250.0
margin_bottom = 300.0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_right = 230.0
margin_bottom = 280.0
custom_constants/separation = 10

[node name="Text" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_right = 230.0
margin_bottom = 24.0
text = "Game over"
align = 1

[node name="Stars" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 230.0
margin_bottom = 66.0
alignment = 1

[node name="Star1" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/Stars"]
margin_left = 63.0
margin_right = 95.0
margin_bottom = 32.0
texture = ExtResource( 4 )

[node name="Star2" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/Stars"]
margin_left = 99.0
margin_right = 131.0
margin_bottom = 32.0
texture = ExtResource( 4 )

[node name="Star3" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/Stars"]
margin_left = 135.0
margin_right = 167.0
margin_bottom = 32.0
texture = ExtResource( 4 )

[node name="Points" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 230.0
margin_bottom = 126.0
rect_min_size = Vector2( 0, 50 )
align = 1

[node name="NextLevel" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 230.0
margin_bottom = 166.0
rect_min_size = Vector2( 0, 24 )
custom_fonts/font = ExtResource( 2 )
text = "next level"

[node name="Restart" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 176.0
margin_right = 230.0
margin_bottom = 206.0
rect_min_size = Vector2( 0, 24 )
custom_fonts/font = ExtResource( 2 )
text = "restart"

[node name="MainMenu" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 216.0
margin_right = 230.0
margin_bottom = 246.0
rect_min_size = Vector2( 0, 24 )
custom_fonts/font = ExtResource( 2 )
text = "main menu"

[connection signal="button_down" from="Panel/MarginContainer/VBoxContainer/NextLevel" to="." method="_on_NextLevel_button_down"]
[connection signal="button_down" from="Panel/MarginContainer/VBoxContainer/Restart" to="." method="_on_Restart_button_down"]
[connection signal="button_down" from="Panel/MarginContainer/VBoxContainer/MainMenu" to="." method="_on_MainMenu_button_down"]
